<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <!-- Row 2 with 3 columns -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                style="@style/boldtext"
                android:layout_height="wrap_content"
                android:maxWidth="50px"
                android:text="@string/kieu_van_ban" />


            <TextView
                android:id="@+id/tvKieuVanBan"
                style="@style/text_sub"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:maxWidth="50px"
                android:padding="20px"
                android:text="Chọn" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                style="@style/boldtext"
                android:layout_height="wrap_content"
                android:maxWidth="50px"
                android:text="@string/phong_ban" />


            <TextView
                android:id="@+id/tvPhongBan"
                style="@style/text_sub"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:maxWidth="50px"
                android:padding="20px"
                android:text="Chọn" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                style="@style/boldtext"
                android:layout_height="wrap_content"
                android:maxWidth="50px"
                android:text="@string/chuyen_vien" />


            <TextView
                android:id="@+id/tvChuyenVien"
                style="@style/text_sub"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:maxWidth="50px"
                android:padding="20px"
                android:text="Chọn" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                style="@style/boldtext"
                android:layout_height="wrap_content"
                android:maxWidth="50px"
                android:text="@string/so_van_ban" />


            <TextView
                android:id="@+id/tvSoVanban"
                style="@style/text_sub"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:maxWidth="50px"
                android:padding="20px"
                android:text="Chọn" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                style="@style/boldtext"
                android:layout_height="wrap_content"
                android:maxWidth="50px"
                android:text="@string/cach_thuc_xu_ly" />

            <LinearLayout
                android:layout_width="80dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bao_cao_ket_qua" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/luu_tham_khao" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/soan_van_ban" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                style="@style/boldtext"
                android:layout_height="wrap_content"
                android:maxWidth="50px"
                android:text="@string/tu_ngay" />


            <TextView
                android:id="@+id/tvTuNgay"
                style="@style/text_sub"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:maxWidth="50px"
                android:padding="20px"
                android:text="dd/mm/yyyy" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                style="@style/boldtext"
                android:layout_height="wrap_content"
                android:maxWidth="50px"
                android:text="@string/den_ngay" />


            <TextView
                android:id="@+id/tvDenNgay"
                style="@style/text_sub"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:maxWidth="50px"
                android:padding="20px"
                android:text="dd/mm/yyyy" />

        </TableRow>

    </TableLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Thống kê"
        android:textAllCaps="false"
        />
</LinearLayout>
