<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#f5f4e9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

   <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"

        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/tableLayout2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <!-- Row 2 with 3 columns -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                style="@style/boldtext"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/trich_yeu" />


            <TextView
                android:id="@+id/txtNguoiChuTri"
                style="@style/textcontent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Uỷ ban nhân dân Quận " />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                style="@style/boldtext"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/so_den" />


            <TextView
                android:id="@+id/txtNoiDung"
                style="@style/textcontent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Đi công tác ở Long " />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                style="@style/boldtext"
                android:layout_width="250px"
                android:layout_height="wrap_content"
                android:text="@string/so_ky_hieu_goc" />


            <TextView
                android:id="@+id/txtPhanCong"
                style="@style/textcontent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Đồng chí Nghĩa" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                style="@style/boldtext"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/noi_phat_hanh" />


            <TextView
                android:id="@+id/txtThanhPhan"
                style="@style/textcontent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Phó Chủ Tịch, Uỷ Viên " />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                style="@style/boldtext"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/cach_thuc_xu_ly" />


            <TextView
                android:id="@+id/txtLoaiXe"
                style="@style/textcontent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="4 chỗ " />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/boldtext"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/so_ngay_xu_ly_cua_phong" />


            <TextView
                android:id="@+id/txtDiaDiem"
                style="@style/textcontent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="left"
                android:text="110 Nguyen Hoang, Quan 2, Thanh pho Ho Chi Minh" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                style="@style/boldtext"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/ngay_hop" />


            <TextView
                android:id="@+id/txtTinhTrang"
                style="@style/textcontent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Đang xử lý" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                style="@style/boldtext"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="" />


            <TextView
                style="@style/textcontent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginRight="30dp"
                android:text="@string/xem_chi_tiet" />
        </TableRow>

    </TableLayout>

    <TextView
        style="@style/table_title"
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/thong_tin_chi_tiet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="1.0"
        android:id="@+id/tableLayout"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnChuyenToi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/buttonChiTiet"
                android:background="#f5f4e9"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/chuyen_toi"
                android:layout_margin="10dp"
                />

            <Button
                android:id="@+id/btnTraLai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tra_lai"
                style="@style/buttonChiTiet"
                android:background="#f5f4e9"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_margin="10dp"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

</android.support.constraint.ConstraintLayout>