<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mac01.democucthue.ChiTietVanBanDenActivity">
    <!-- Must be last for right layering display -->
    <FrameLayout
        android:id="@+id/toolbar_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark" />

        <com.miguelcatalan.materialsearchview.MaterialSearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_container"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/buttonChiTiet"
                android:drawableLeft="@drawable/ic_vb_den_xu_ly"
                android:text="@string/vb_den_xu_ly"
                />

            <Button
                android:id="@+id/button5"
                style="@style/buttonChiTiet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_so_vb_den"
                android:text="@string/so_vb_den"
                 />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/buttonChiTiet"
                android:drawableLeft="@drawable/ic_thong_ke_vb"
                android:text="@string/thong_ke_vb"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/buttonChiTiet"
                android:drawableLeft="@drawable/ic_tra_cuu_vb"
                android:text="@string/tra_cuu_vb"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical">
            <TextView
                style="@style/table_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/luan_chuyen"
                />
            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f5f4e9"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                ></LinearLayout>

            <include layout="@layout/content_chi_tiet_vb_den"></include>
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
